tandem周りの調整。

--- a/vertical/index.html
+++ b/vertical/index.html
@@ -418,7 +418,7 @@ figcaption {
 <p class="img-wrap"><img alt="街路" src="image/snow-street-day_96dpi.jpg" srcset="image/snow-street-day.jpg 3.125x" /></p>
 </figure>
 <p>キャプションがある場合は次のとおりです。</p>
-<figure class="bfl image image-fc image-sdl">
+<figure class="bfl image image-fc image-sdl" id="no-setting-height-in-firefox">
 <p class="img-wrap"><img alt="図5" src="image/snow-street-day_96dpi.jpg" srcset="image/snow-street-day.jpg 3.125x" /></p>
 <figcaption><span class="fc-title">図<span class="fc-ordinal">5</span></span> ⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄⛄</figcaption>
 </figure>
