sidebyside周りの横幅調整。

--- a/vertical/index.html
+++ b/vertical/index.html
@@ -597,7 +597,7 @@ figcaption {
 }
 </code></pre>
 <div class="zoom">
-<figure class="bfl sidebyside sidebyside-sdl sidebyside-with-fc">
+<figure class="bfl sidebyside sidebyside-sdl sidebyside-fc">
 <div class="sidebyside-images">
 <figure class="sidebyside-image">
 <p class="img-wrap"><img alt="図16-①" src="image/ramen-sumire.jpg" title="🍜1" /></p>
