--- a/vertical/index.html
+++ b/vertical/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <nav class="nav-toc" id="nav-toc">
-<h2><a href="#nav-toc">table of contents</a></h2>
+<h2><a href="#nav-toc">目次</a></h2>
 <ol>
 <li><a href="#chapterx-1"><span class="ch2-label">X.1</span> <strong>EPUBとCSSレイアウト</strong></a></li>
 <li><a href="#chapterx-2"><span class="ch2-label">X.2</span> <strong>縦書きレイアウトの基礎</strong></a></li>
@@ -65,7 +65,7 @@
 <pre><code class="prettyprint">-ms-writing-mode: tb-rl; /* for IE. */
 -webkit-writing-mode: vertical-rl; /* for safari. */
 writing-mode: vertical-rl;</code></pre>
-<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって規定されています。ただし現在は、この仕様通りに正立するとは限りません。特に、後述の游書体を当てた場合に<span class="tcy">3</span>点リーダーがこの指定だけでは正立しないことに注意してください。縦書き（︙）と横書き（…）のUnicode自体が<a href="https://ja.wikipedia.org/wiki/%E3%83%AA%E3%83%BC%E3%83%80%E3%83%BC_%28%E8%A8%98%E5%8F%B7%29#.E7.AC.A6.E5.8F.B7.E4.BD.8D.E7.BD.AE">別になっています</a>（縦書きで使われる記号はよく分かれています）。</p>
+<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって<a href="http://www.unicode.org/Public/vertical/revision-15/VerticalOrientation-15.html">規定されています</a>。ただし現在は、この仕様通りに正立しないことがあり得ることを念のため注意してください。</p>
 <p>writing-modeの話に戻ります。この指定をbody要素に指定してもFirefox 44.0では上手くブラウザを操作できなくなります。Safariでも現状高さを指定しておく必要があります。そのため、描画領域を縦書き化するためのCSSは次のようになります。</p>
 <pre><code class="prettyprint">html {
   height: 100%; /* for firefox, safari. */
@@ -75,7 +75,6 @@ body {
   writing-mode: vertical-rl;
   width: -moz-calc(100vw); /* for firefox. */
   height: 100%; /* for firefox, safari. */
-  overflow: auto !important; /* for edge. But specified overflow-y is canceled. */  
 }</code></pre>
 <p>さらに、Mobile Safari対策のために次のmeta要素を入れるようにしてください。しかし現状Mobile Safariでは描画時に、縦組みの始まり側にスクロール位置が置かれません。</p>
 <pre><code class="prettyprint"><span class="keyword">&lt;meta</span><span class="pln"> </span><span class="atn">name</span><span class="pun">=</span><span class="string">"viewport"</span><span class="pln"> </span><span class="atn">content</span><span class="pun">=</span><span class="string">"height=device-height, initial-scale=1.0, shrink-to-fit=no"</span><span class="keyword">&gt;</span></code></pre>
@@ -92,7 +91,6 @@ body {
 <h3 class="ch3">フォントの指定</h3>
 <p>ブラウザ上で縦書きを使う場合、WindowsとMac OSの両方にある書体である游明朝と游ゴシックを指定しておくのが簡単には按配が良くお勧めです。なお、読書システムでは標準の日本語フォントが搭載されていることも多いので、EPUBでは指定しないほうが無難です。</p>
 <p>ただし、Firefoxでは縦書きで游書体を指定した際は、日本語と半角の英数字でベースラインのずれが気になるかと思います。そのため英字の書体も合わせて指定してみても良いかもしれません。</p>
-<p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があり、参考になるでしょう。</p>
 <p>ということで、このページでは、次のように指定しています。</p>
 <pre><code class="prettyprint">@font-face {
   font-family: 'Yu Mincho Custom';
@@ -114,13 +112,12 @@ body {
 }
 p {
   font-family: 'Yu Mincho Custom', serif;
-  font-feature-settings: 'vert';
 }
 h1, h2, h3, h4, h5, h6, li, dt, dd, figcaption {
   font-family: 'Yu Gothic Custom', sans-serif;
-  font-feature-settings: 'vert';
 }</code></pre>
-<p>なお、<code>font-feature-settings: 'vert';</code>を指定することで、フォントによっては縦書き用フォントを使用するようになるため、游書体とwriting-modeプロパティだけでは正立しなかった横書きの<span class="tcy">3</span>点リーダーが縦書きのものになりChromeで正立するようになります。</p>
+<p>なお、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があり、参考になるでしょう。</p>
+
 <p>また、コードのフォントはデフォルトではSafariできれいに表示されません。よって、Safari用に具体的に指定する必要があります。また、iPhone（iOS 9）のMobile Safari上では自動的にコードのフォントサイズに修正が入るため、これを打ち消す必要があります。それらの対応としてこのページでは、次のように指定しています。</p>
 <pre><code class="prettyprint">@font-face {
   font-family: 'Vertical Mono';
@@ -158,7 +155,6 @@ code, samp, .url, :root:lang(en) {
 <p>例えば、このページでは次のCSS（以降SCSSの場合もある）を適用してきます。</p>
 <pre><code class="prettyprint">rt, rtc {
   font-variant-east-asian: ruby;
-  -moz-font-feature-settings: 'ruby';
   -webkit-font-feature-settings: 'ruby';
   font-feature-settings: 'ruby';
 }
@@ -183,7 +179,6 @@ rtc {
   white-space: inherit;
   text-emphasis: inherit;    
   font-variant-east-asian: inherit;
-  -moz-font-feature-settings: inherit;
   -webkit-font-feature-settings: inherit;
   font-feature-settings: inherit;
 }
@@ -196,7 +191,7 @@ rtc {
 </code></pre>
 <p>その結果、次のよう描画されます。最後の「札幌（さっぽろ）」と表示されている箇所がインラインルビです。</p>
 <figure class="bfl example">
-<p>先日、イベントに参加するために<ruby>北海道<rp>（</rp><rt>ほっかいどう</rt><rp>）</rp></ruby>に行ってきました。雪が今年はあまり降っていないということで<ruby>大通<rp>（</rp><rt>おおどおり</rt><rp>）</rp></ruby>などの歩道は地面が<ruby>見<rp>（</rp><rt>み</rt><rp>）</rp></ruby>えていました。食事については<ruby>🍣<rp>（</rp><rt>美味しいお寿司</rt><rp>）</rp></ruby>をたくさん食べてきました。<ruby>鮪<rp>（</rp><rt>まぐろ</rt><rp>）</rp></ruby>やタコ、<ruby>北寄貝<rp>（</rp><rt>ほっきがい</rt><rp>）</rp></ruby>のほか、旬の<ruby>鰤<rp>（</rp><rt>ぶり</rt><rp>）</rp></ruby>や<ruby>真鱈の白子<rp>（</rp><rt>たちぽん</rt><rp>）</rp></ruby>などなど<span class="tcy">…</span><span class="tcy">…</span>。その時の<ruby>写真<rp>（</rp><rt>しゃしん</rt><rp>；</rp><rtc>Photo</rtc><rp>）</rp></ruby>をこのページに掲載します。</p>
+<p>先日、イベントに参加するために<ruby>北海道<rp>（</rp><rt>ほっかいどう</rt><rp>）</rp></ruby>に行ってきました。雪が今年はあまり降っていないということで<ruby>大通<rp>（</rp><rt>おおどおり</rt><rp>）</rp></ruby>などの歩道は地面が<ruby>見<rp>（</rp><rt>み</rt><rp>）</rp></ruby>えていました。食事については<ruby>🍣<rp>（</rp><rt>美味しいお寿司</rt><rp>）</rp></ruby>をたくさん食べてきました。<ruby>鮪<rp>（</rp><rt>まぐろ</rt><rp>）</rp></ruby>やタコ、<ruby>北寄貝<rp>（</rp><rt>ほっきがい</rt><rp>）</rp></ruby>のほか、旬の<ruby>鰤<rp>（</rp><rt>ぶり</rt><rp>）</rp></ruby>や<ruby>真鱈の白子<rp>（</rp><rt>たちぽん</rt><rp>）</rp></ruby>などなど……。その時の<ruby>写真<rp>（</rp><rt>しゃしん</rt><rp>；</rp><rtc>Photo</rtc><rp>）</rp></ruby>をこのページに掲載します。</p>
 <p style="text-align: right;">—— <span class="tcy">2</span><span class="tcy">0</span><span class="tcy">1</span><span class="tcy">6</span>年、<ruby class="inline-ruby">札幌<rp>（</rp><rt>さっぽろ</rt><rp>）</rp></ruby>にて</p>
 </figure>
 </section>
@@ -389,10 +384,6 @@ figcaption {
       caption-side: bottom;
       min-width: 13.4em;
       margin: 0.35em 0 0;
-      font-variant-east-asian: proportional-width;
-      -moz-font-feature-settings: 'pwid';
-      -webkit-font-feature-settings: 'pwid';
-      font-feature-settings: 'pwid';
     }
     .fc-title {
       margin: 0 0.25em 0 0;
@@ -618,7 +609,7 @@ figcaption {
 </main>
 
 <footer>
-<p><a href="https://github.com/peaceroad/css-layout">GitHub</a> / <a href="https://twitter.com/k_taka">@k_taka</a></p>  
+<p>、。<a href="https://github.com/peaceroad/css-layout">GitHub</a> / <a href="https://twitter.com/k_taka">@k_taka</a></p>
 </footer>
 </div>
   
